# AdjutantVoice

./: LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  TESTING.md
scripts/: clone_voice.py  speak.py  start_server.py
src/adjutantvoice/: __init__.py  cli.py  config.py  mcp.py  server.py  tts.py  voice.py
src/adjutantvoice/clients/: hermes.py
src/adjutantvoice/integrations/: hermes.py
tests/: conftest.py  test_cli.py  test_config.py  test_hermes_client.py  test_hermes_integration.py  test_mcp.py  test_server.py  test_tts.py  test_voice.py
